objects/SDO_Service_Bot_Message__c.object
<CustomObject>
    <description>What: Used by the Jokes part of the Sunny Bot
Who: Service Cloud Team.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message_1__c</fullName>
        <label>Message 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message_2__c</fullName>
        <label>Message 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Joke</fullName>
                </value>
                <value>
                    <fullName>Gratitude</fullName>
                </value>
                <value>
                    <fullName>Greetings</fullName>
                </value>
                <value>
                    <fullName>Chit Chat</fullName>
                </value>
                <value>
                    <fullName>Confused</fullName>
                </value>
                <value>
                    <fullName>End Chat</fullName>
                </value>
                <value>
                    <fullName>Anything Else</fullName>
                </value>
                <value>
                    <fullName>Profanity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bot Message</label>
    <nameField>
        <label>Bot Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>